--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Utilities</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
-<body>
-    
+<body>    
+    <div id="mainNavBar"></div>
+    <div id="mainBody"></div>
     <script src="main.js"></script>
 </body>
 </html>
