Changing the project style to taboog

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="IcoMoon/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="JS/dashboard.js"></script>
+    <script src="JS/aboutus.js"></script>
+    <script src="JS/ourJourney.js"></script>
 </head>
 <body>    
     <div id="mainNavBar"></div>
     <div id="mainBody"></div>
-    <script src="main.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html>
