--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="JS/aboutus.js"></script>
     <script src="JS/ourJourney.js"></script>
     <script src="JS/navbar.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 <body>    
     <div id="mainNavBar"></div>
