--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="JS/dashboard.js"></script>
     <script src="JS/aboutus.js"></script>
+    <script src="JS/ourProducts.js"></script>
     <script src="JS/ourJourney.js"></script>
     <script src="JS/navbar.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
